@@ -109,7 +109,7 @@ rb-open-quick-ref-window=Open quick reference window
 rb-pages=Pages
 rb-per-second-suffix=/ s
 rb-pin-instruction=Keep open
-rb-placeable-by=Placeable by
+rb-placed-by=Placed by
 rb-place-result=Place result
 rb-prerequisite-of=Prerequisite of
 rb-prerequisites=Prerequisites
