@@ -15,7 +15,7 @@ return function(recipe_book, dictionaries, metadata)
       crafting_speed = 1,
       hidden = false,
       ingredient_limit = ingredient_limit,
-      placeable_by = util.process_placeable_by(prototype),
+      placed_by = util.process_placed_by(prototype),
       prototype_name = name,
       recipe_categories_lookup = prototype.crafting_categories,
       recipe_categories = util.convert_categories(prototype.crafting_categories, "recipe_category"),
@@ -58,7 +58,7 @@ return function(recipe_book, dictionaries, metadata)
       fuel_categories = util.process_energy_source(prototype),
       hidden = is_hidden,
       ingredient_limit = ingredient_limit,
-      placeable_by = util.process_placeable_by(prototype),
+      placed_by = util.process_placed_by(prototype),
       prototype_name = name,
       recipe_categories_lookup = prototype.crafting_categories,
       recipe_categories = util.convert_categories(prototype.crafting_categories, "recipe_category"),
